<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/select_color"
        android:textColor="#ededed"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/rgbButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/rgb"
            android:textColor="@color/white"
            android:theme="@style/FlatButtonControlWhite" />

        <Button
            android:id="@+id/argbButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/argb"
            android:textColor="@color/white"
            android:theme="@style/FlatButtonControlWhite" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colorRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/cancelColor"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/rgbApplyButton"
            android:layout_toStartOf="@+id/rgbApplyButton"
            android:layout_toLeftOf="@+id/rgbApplyButton"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:theme="@style/FlatButtonControlWhite" />

        <Button
            android:id="@+id/applyColor"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:theme="@style/FlatButtonControlWhite" />
    </LinearLayout>
</LinearLayout>